--- a/client/src/pages/Home/Home.css
+++ b/client/src/pages/Home/Home.css
@@ -1,6 +1,6 @@
 /* ──────────── VARIABLES & GLOBAL ──────────── */
 :root {
-  --primary: #39ff14;
+  --primary: #00ff7e;;
   --primary-hover: #2db30c;
   --dark-bg: #0f172a;
   --nav-bg: #1e293b;
@@ -12,7 +12,7 @@
   --shadow-light: 0 8px 20px rgba(0, 0, 0, 0.15);
   --shadow-dark: inset 0 0 10px rgba(0, 0, 0, 0.25);
 }
-
+/*Gravitas academy for next gen intelegence training*/
 * {
   margin: 0;
   padding: 0;
@@ -82,7 +82,10 @@ body::-webkit-scrollbar {
   font-weight: 700;
   font-size: 1.6rem;
 }
-
+.logo img {
+  width: 50px;
+  margin-right: 10px;
+}
 
 
 .logo {
@@ -829,7 +832,7 @@ section {
   font-weight: 700;
   color: var(--light-text);
   letter-spacing: 1.2px;
-  text-shadow: 0 0 8px var(--primary);
+  /* text-shadow: 0 0 8px var(--primary); */
 }
 
 .testimonial-list {
