seperated all sections and added all the pages to respective btns

--- a/client/src/pages/Home/allinone/AllinoneHome.css
+++ b/client/src/pages/Home/allinone/AllinoneHome.css
@@ -1,3 +1,4 @@
+/* Upto here home page is perfect in all the stylings and components*/
 /* ──────────── VARIABLES & GLOBAL ──────────── */
 
 :root {
