--- a/client/src/pages/Home/Home.css
+++ b/client/src/pages/Home/Home.css
@@ -977,7 +977,7 @@ section {
 
 .job-card-bottom {
   display: flex;
-  gap: 20px;
+  justify-content: space-between;
   margin-top: 10px;
   font-size: 0.85rem;
   color: #cbd5e1;
