--- a/client/src/pages/Admin/JobAdmin.css
+++ b/client/src/pages/Admin/JobAdmin.css
@@ -3,7 +3,6 @@
 .admin-dashboard {
     display: flex;
     flex-direction: column;
-    width: 100%;
     max-width: 1200px;
 }
 
@@ -34,13 +33,17 @@
         text-align: left;
     }
 }
+
 .admin-title-divider {
-  border: none;
-  height: 2px;
-  background-color: #ccc; /* or any color */
-  margin-top: 16px;
+    border: none;
+    height: 2px;
+    background-color: #ccc;
+    /* or any color */
+    margin-top: 16px;
 
 }
+
+
 
 
 /* Form title */
@@ -61,33 +64,17 @@
     box-shadow: var(--shadow-light);
     padding: 2rem;
     border-radius: 8px;
-    width: 100%;
-    max-width: 1200px;
 }
 
-/* Checkbox */
-.checkbox-group {
-    display: flex;
-    align-items: center;
-}
 
-.checkbox-group label {
-    display: flex;
-    align-items: center;
-    font-weight: 500;
-    color: var(--light-tex);
-    width: 100%;
-}
-
-.checkbox-group input[type="checkbox"] {
-    outline: none;
-    width: 5%;
-}
 
 
 
 /* Job Card */
 .job-list-title {
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
     margin-top: 2.2rem;
     color: var(--light-text);
     text-align: center;
@@ -101,8 +88,7 @@
     display: grid;
     grid-template-columns: repeat(2, 1fr);
     gap: 1.5rem;
-    width: 1200px;
-    /* max-width: 1200px; */
+    width: 100%;
     margin: 0 auto;
 }
 
@@ -110,12 +96,76 @@
     box-shadow: 0 8px 20px rgba(0, 0, 0, 0.1);
 }
 
+.job-title {
+    font-size: 1.3rem;
+}
 
+.job-company {
+    font-size: 1.15rem;
+    display: flex;
+    align-items: center;
+}
+
+.job-summary {
+    text-align: left;
+    font-size: 0.9rem;
+}
+
+.loc-sal {
+    display: flex;
+    /* justify-content: space-between; */
+    gap: 20px;
+    margin-top: 10px;
+    font-size: 1rem;
+    color: #cbd5e1;
+}
+
+.job-skills {
+    margin-top: 10px;
+    display: flex;
+    flex-wrap: wrap;
+    gap: 8px;
+}
+
+.job-skill-tag {
+    background-color: #dfdfdf;
+    color: #333;
+    padding: 4px 8px;
+    font-size: 0.8rem;
+    border-radius: 12px;
+}
+
+
+
+
+.skills-list {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 8px;
+}
+
+
+.job-skill-tag button {
+  background: none;
+  border: none;
+  margin-left: 6px;
+  color: #333;
+  font-weight: bold;
+  cursor: pointer;
+}
 
 
 
 .job-card-admin {
     border: 1px solid #ddd;
+    background: var(--nav-bg);
+}
+
+.job-admin-actions {
+    margin-top: 10px;
+    width: 100%;
+    display: flex;
+    justify-content: flex-end;
 }
 
 .job-card-admin button {
@@ -129,12 +179,21 @@
 }
 
 .job-card-admin button:first-child {
-    background-color: #ffc107;
-    color: #000;
+    background-color: #1a76ffd1; 
+  color: #fff;
 }
 
 .job-card-admin button:first-child:hover {
-    background-color: #e0a800;
+    background-color: #0065fe8d;
+}
+
+.job-card-admin button:nth-child(2) {
+  background-color: #ffc107; 
+  color: #000;
+}
+
+.job-card-admin button:nth-child(2):hover {
+  background-color: #e0a800;
 }
 
 .job-card-admin button:last-child {
@@ -146,6 +205,25 @@
     background-color: #c82333;
 }
 
+.apply-btn {
+    background: var(--primary);
+    color: var(--dark-bg);
+
+}
+
+/* Responsive */
+@media (min-width: 768px) {
+    .add-job-form {
+        width: 100%;
+    }
+
+    .job-list-wrapper {
+        width: 1200px;
+    }
+
+}
+
+
 /* Responsive */
 @media (max-width: 768px) {
 
@@ -156,14 +234,36 @@
     }
 
     .job-list-wrapper {
+        padding: 12px;
+        margin: 0;
         grid-template-columns: 1fr;
+    }
+
+    .job-title {
+        font-size: 1.28rem;
+    }
+
+    .job-company {
+        font-size: 1.15rem;
+    }
+
+    .job-summary {
+        text-align: left;
+        font-size: 0.8rem;
     }
 
     .job-card-admin {
         padding: 1rem;
     }
 
+    .apply-btn {
+        font-size: 0.9rem;
+        padding: 10px 24px;
+    }
+
     .job-card-admin button {
         font-size: 0.9rem;
     }
+
+
 }
