--- a/client/src/pages/Admin/JobAdmin.css
+++ b/client/src/pages/Admin/JobAdmin.css
@@ -80,6 +80,11 @@
     text-align: center;
 }
 
+.job-id {
+    font-size: 0.8rem;
+    color: #94a3b8;
+}
+
 .job-list-wrapper {
     background: var(--nav-bg);
     padding: 20px;
@@ -139,19 +144,19 @@
 
 
 .skills-list {
-  display: flex;
-  flex-wrap: wrap;
-  gap: 8px;
+    display: flex;
+    flex-wrap: wrap;
+    gap: 8px;
 }
 
 
 .job-skill-tag button {
-  background: none;
-  border: none;
-  margin-left: 6px;
-  color: #333;
-  font-weight: bold;
-  cursor: pointer;
+    background: none;
+    border: none;
+    margin-left: 6px;
+    color: #333;
+    font-weight: bold;
+    cursor: pointer;
 }
 
 
@@ -179,8 +184,8 @@
 }
 
 .job-card-admin button:first-child {
-    background-color: #1a76ffd1; 
-  color: #fff;
+    background-color: #1a76ffd1;
+    color: #fff;
 }
 
 .job-card-admin button:first-child:hover {
@@ -188,12 +193,12 @@
 }
 
 .job-card-admin button:nth-child(2) {
-  background-color: #ffc107; 
-  color: #000;
+    background-color: #ffc107;
+    color: #000;
 }
 
 .job-card-admin button:nth-child(2):hover {
-  background-color: #e0a800;
+    background-color: #e0a800;
 }
 
 .job-card-admin button:last-child {
@@ -213,29 +218,31 @@
 
 
 .badge.closed {
-  display: inline-block;
-  padding: 4px 10px;
-  background-color: #e63946; /* soft red */
-  color: white;
-  border-radius: 12px;
-  font-size: 0.75rem;
-  font-weight: 600;
-  text-transform: uppercase;
-  letter-spacing: 0.5px;
-  box-shadow: 0 1px 2px rgba(0, 0, 0, 0.1);
-  animation: fadeIn 0.3s ease-in-out;
+    display: inline-block;
+    padding: 4px 10px;
+    background-color: #e63946;
+    /* soft red */
+    color: white;
+    border-radius: 12px;
+    font-size: 0.75rem;
+    font-weight: 600;
+    text-transform: uppercase;
+    letter-spacing: 0.5px;
+    box-shadow: 0 1px 2px rgba(0, 0, 0, 0.1);
+    animation: fadeIn 0.3s ease-in-out;
 }
 
 
 @keyframes fadeIn {
-  from {
-    opacity: 0;
-    transform: translateY(-2px);
-  }
-  to {
-    opacity: 1;
-    transform: translateY(0);
-  }
+    from {
+        opacity: 0;
+        transform: translateY(-2px);
+    }
+
+    to {
+        opacity: 1;
+        transform: translateY(0);
+    }
 }
 
 
